# COVID19Motif

./: .gitignore  README.md
codes/: neo4j-import.txt
codes/covid19/: readme.txt
codes/java/: pom.xml
codes/mc-explorer/: readme.txt
codes/mc-explorer/algorithm/: CMakeLists.txt  SetTrieNode.cpp  SetTrieNode.h  experiments.xlsx  global-variable.cpp  global-variable.h  main.cpp  maximal-motif-clique.cpp  utils.h
codes/mc-explorer/algorithm/include/: argedit.hpp  argloader.hpp  probabilitysorter.hpp  sorter.hpp  vf3_sub_state.hpp
codes/mc-explorer/algorithm/plots/: histogramCase3.m  varymotifsizeAndResultNumAmazon.m  varymotifsizeAndResultNumInstacart.m  varymotifsizeAndResultNumReactome.m  verymotifsizehprd.m  verymotifsizereactome.m
codes/mc-explorer/algorithm/plots/dynamic-graph/addEdge/: varymotifsizeAmazon.m
codes/mc-explorer/algorithm/plots/dynamic-graph/addNode/: varymotifsizeAmazon.m  varymotifsizeDblp.m  varymotifsizeInstacart.m
codes/mc-explorer/algorithm/plots/dynamic-graph/removeEdge/: varymotifsizeAmazon.m  varymotifsizeHPRD.m  varymotifsizeInstacart.m  varymotifsizeYeast.m
codes/mc-explorer/algorithm/plots/dynamic-graph/removeNode/: varymotifsizeAmazon.m  varymotifsizeHPRD.m  varymotifsizeInstacart.m  varymotifsizeYeast.m
codes/webpage/: mcypher.html
data/: Phy_Label.txt  README.md  mappings.lg  nodes  phylogeny.lg.edges  readme.txt
data/datasets/: README.md
data/edges/: disease_gene.txt  drug_gene.txt  drug_virus.txt  drug_virusprotein.txt  geneID_hostprotein.txt  hpo_virus.txt  location_location.txt  strain_location.txt  (+6 more)
(+181 files in other folders)
